--- a/IntegrityChecker/.classpath
+++ b/IntegrityChecker/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="var" path="SOOTCLASSES" sourcepath="SOOTSRC"/>
 	<classpathentry kind="lib" path="log4j-1.2.11.jar"/>
-	<classpathentry kind="lib" path="commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.4.jar" sourcepath="/home/joe/.m2/repository/commons-io/commons-io/2.4/commons-io-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="/home/joe/yuechun/sootfiles/symja-2015-09-26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
